extends Node3D


func _on_left_solo_key_building_center_statue_received_effects(effects: Array[EffectData]) -> void:
	print("left room received effects in center statue!")


func _on_left_solo_key_building_left_statue_received_effects(effects: Array[EffectData]) -> void:
	print("left room received effects in left statue!")


func _on_left_solo_key_building_right_statue_received_effects(effects: Array[EffectData]) -> void:
	print("left room received effects in right statue!")


func _on_center_solo_key_building_center_statue_received_effects(effects: Array[EffectData]) -> void:
	print("center room received effects in center statue!")


func _on_center_solo_key_building_left_statue_received_effects(effects: Array[EffectData]) -> void:
	print("center room received effects in left statue!")


func _on_center_solo_key_building_right_statue_received_effects(effects: Array[EffectData]) -> void:
	print("center room received effects in right statue!")


func _on_right_solo_key_building_center_statue_received_effects(effects: Array[EffectData]) -> void:
	print("right room received effects in center statue!")


func _on_right_solo_key_building_left_statue_received_effects(effects: Array[EffectData]) -> void:
	print("right room received effects in left statue!")


func _on_right_solo_key_building_right_statue_received_effects(effects: Array[EffectData]) -> void:
	print("right room received effects in right statue!")
